--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,4 +1,5 @@
 spring.datasource.url=jdbc:h2:file:C:/Users/pawel/IdeaProjects/TODO-APP/todoDB;AUTO_SERVER=TRUE
+spring.jpa.show-sql=true
 spring.h2.console.path=/console
 spring.datasource.username=sa
 spring.datasource.password=
