Added async methods

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -6,3 +6,7 @@ spring.datasource.password=
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.flyway.enabled=true
+#keycloak.auth-server-url=http://localhost:8180/auth
+#keycloak.realm=ToDoApp
+#keycloak.resource=todo-app-client
+#keycloak.public-client=true
