--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 task.template.allowMultipleTasks=false
 spring.main.banner-mode=off
 spring.profiles.active=local
+management.endpoints.web.base-path=/status
+management.endpoints.web.exposure.include=*
