--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.main.banner-mode=off
 spring.profiles.active=local
 management.endpoints.web.base-path=/status
 management.endpoints.web.exposure.include=*
+management.metrics.enable.http = false
